[package]
name = "printnanny-dash"
description = "PrintNanny OS Dashboard"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/bitsy-ai/printnanny-dash"
license-file = "LICENSE"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
actix-web = "4"
actix-web-static-files = "4.0"
static-files = "0.2.1"
env_logger = "0.9"              # A logging implementation for `log` which is configured via an environment variable. 
log = "0.4"                  # A lightweight logging facade for Rust                # Additional utilities for working with Tokio. 

[build-dependencies]
static-files = "0.2.1"
