[package]
name = "printnanny-dash"
description = "PrintNanny OS Dashboard"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/bitsy-ai/printnanny-dash"
license-file = "LICENSE"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"                # Flexible concrete Error type built on std::error::Error
actix = "0.13"
actix-web = "4"
actix-web-static-files = "4.0"
figment = { version = "0.10", features = ["env", "json", "toml"] }
static-files = "0.2.1"
env_logger = "0.9"              # A logging implementation for `log` which is configured via an environment variable. 
log = "0.4"                  # A lightweight logging facade for Rust                # Additional utilities for working with Tokio. 
serde = { version = "1", features = ["derive"] }


[build-dependencies]
static-files = "0.2.1"


[dev-dependencies]
figment = { version = "0.10", features = ["env", "json", "toml", "test"] }
